# Intro-to-Machine-Learning

./: .gitmodules  README.md
hw1/: ml_play_F74126131.py  ml_play_auto.py  ml_play_manual.py
hw2/: ml_play_ai.py  ml_play_auto_1.py  ml_play_auto_2.py  ml_play_auto_3.py  ml_play_auto_4.py  ml_play_manual.py
hw3/: ml_play_pyr_test.py
hw3/pyr/: Cargo.toml
hw3/pyr/src/: lib.rs
hw3/pyr/src/app/: action.rs  agent.rs  huber.rs  mod.rs  state.rs
hw3/pyr/src/data/: config.rs  internal.rs  mod.rs  raw.rs
hw4/: lenet.grapycal
hw5/: .gitignore  justfile  test.sh  train.sh
hw5/ml/: collect1.py  collect2.py  test.py
hw5/tank-rust/: Cargo.toml
hw5/tank-rust/src/: fit.rs  lib.rs  main.rs
hw5/tank-rust/src/dqn/: collect.rs  dataset.rs  feature.rs  mod.rs  model.rs  training.rs
hw5/tank-rust/src/ffi/: action.rs  mod.rs
hw5/tank-rust/src/ffi/info/: bullet.rs  mod.rs  player.rs  station.rs  wall.rs
