[package]
name = "tank-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'
panic = "abort"
strip = "symbols"

[lib]
crate_type = ["cdylib"]

[dependencies]
burn = { version = "0.13.2", features = ["wgpu","dataset","train","tui","metrics","autodiff"] }
serde = {version="1.0.202", features = ["derive"]}
bincode = "1.3.3"
rand = "0.8.5"
lazy_static = "1.4.0"
cfg-if = "1.0.0"

[features]
default = ["train"]
train = []
